# 100-day-ROS-2-learning-challenge

./: README.md
controls/: CMakeLists.txt  package.xml  setup.py
controls/config/: simple_controllers.yaml
controls/launch/: gazebo.launch.py
controls/scripts/: auto_arm_mover.py
controls/urdf/: simplearm.urdf  test.urdf
custom_interfaces2/: CMakeLists.txt  package.xml
custom_interfaces2/action/: MoveAndRotate.action
patrol_action_server/: package.xml  setup.cfg  setup.py
patrol_action_server/patrol_action_server/: patrol_action_client.py  patrol_action_server.py
simple_robot_description/: CMakeLists.txt  package.xml
simple_robot_description/launch/: display.launch.py  gazebo.launch.py
simple_robot_description/resource/: simple_robot_description
simple_robot_description/urdf/: simple_robot.urdf  two_wheeled_robot.xacro
turtle_controller/: package.xml  setup.py
turtle_controller/turtle_controller/: circle_client.py  move_and_rotate_server.py
two_wheel_bot/: CMakeLists.txt  default.rviz  package.xml
two_wheel_bot/config/: config.lua  diff_driv.yaml  nav2_params.yaml  slam_toolbox.yaml
two_wheel_bot/launch/: cartographer.launch.py  diff_drive.launch.py  display.launch.py  gazebo.launch.py  localization.launch.py  slam.launch.py
two_wheel_bot/maps/: map1.pgm  map1.yaml  my_map.pgm  my_map.yaml
two_wheel_bot/urdf/: finalrobo.urdf  simplearm.urdf
urdf_tutorial_r2d2/: setup.py
urdf_tutorial_r2d2/launch/: demo.launch.py
