<?xml version="1.0"?>
<package format="3">
  <name>simple_robot_description</name>
  <version>0.0.1</version>
  <description>Simple two-wheeled robot URDF for RViz and Gazebo</description>

  <maintainer email="nithin@example.com">Nithin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
