<?xml version="1.0"?>
<package format="3">
  <name>two_wheel_bot</name>
  <version>0.0.1</version>
  <description>Two wheel robot URDF and launch files</description>
  <maintainer email="nithin@example.com">Nithin</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

